--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.15.3",
-    "@types/node-telegram-bot-api": "^0.61.3",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.5",
+    "@types/node-telegram-bot-api": "^0.61.4",
+    "prisma": "^4.11.0",
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "@prisma/client": "^4.11.0",
+    "@sendgrid/mail": "^7.7.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "node-telegram-bot-api": "^0.61.0",
     "playwright": "^1.31.2",
     "pm2": "^5.3.0",
