--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,12 @@
     "strictNullChecks": true,
     "sourceMap": true,
     "allowJs": true,
-    "target": "es5",
+    "target": "ES6",
     "outDir": ".build",
     "moduleResolution": "node",
-    "lib": ["es2015"],
+    "lib": ["ES2018"],
     "rootDir": "./",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": ["./types.d.ts"]
   }
 }
