--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "@sendgrid/mail": "^7.7.0",
+    "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
