--- a/bot/package.json
+++ b/bot/package.json
@@ -12,22 +12,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@types/node": "^18.15.5",
     "@types/node-telegram-bot-api": "^0.61.4",
+    "dotenv": "^16.0.3",
     "prisma": "^4.11.0",
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.303.0",
     "@prisma/client": "^4.11.0",
     "@sendgrid/mail": "^7.7.0",
     "cheerio": "1.0.0-rc.12",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "helmet": "^6.0.1",
     "node-telegram-bot-api": "^0.61.0",
     "playwright": "^1.31.2",
     "pm2": "^5.3.0",
+    "sqs-consumer": "^7.0.3",
     "undici": "^5.21.0"
   }
 }
