--- a/bot2/package.json
+++ b/bot2/package.json
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "playwright": "^1.31.2",
     "playwright-extra": "^4.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "^18.15.5",
+    "@types/string-similarity": "^4.0.0",
+    "prisma": "^4.11.0",
     "sucrase": "^3.32.0",
     "typescript": "^5.0.4"
   }
